# helptulsa

./: README.md
data/: resources.jsonl
data/qdrant/collections/help_resources/0/: newest_clocks.json
data/qdrant/collections/help_resources/0/segments/0538c662-e932-40cd-a2eb-0346f4063d49/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/09a5bb2b-b8da-4e76-8f6c-50c627ff8bd7/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/1d66e15c-8858-4e65-81de-7173720c2e79/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/30cbdc61-939d-4dea-a148-cbe6c18d101e/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/43cb9cc8-50af-4ec8-9877-c012f7e3d4fa/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/4c7b2371-6a79-4aa0-a133-2a110357d01a/: mutable_id_tracker.mappings
data/qdrant/collections/help_resources/0/segments/4c7b2371-6a79-4aa0-a133-2a110357d01a/payload_index/: IDENTITY  LOG  MANIFEST-000005
data/qdrant/collections/help_resources/0/segments/6cc92872-4fc2-499c-a66a-29d5a29e683a/payload_index/: IDENTITY  LOG  MANIFEST-000005
services/api_service/: pyproject.toml
services/api_service/help_tulsa_api/: main.py  semantic_search.py
services/api_service/help_tulsa_api/templates/: index.html
services/frontend/: index.html  package-lock.json  package.json
services/frontend/src/: App.tsx
(+3 files in other folders)
